--- a/front/lib-svelte/package.json
+++ b/front/lib-svelte/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "npx eslint . --fix"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@sveltejs/vite-plugin-svelte": "^5.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/qrcode": "^1.5.5",
     "eslint": "^9.23.0",
@@ -20,13 +20,13 @@
     "globals": "^16.0.0",
     "prettier": "3.3.3",
     "prettier-plugin-svelte": "^3.2.8",
-    "sass-embedded": "^1.85.1",
+    "sass": "^1.93.3",
     "svelte": "^5.1.3",
     "svelte-check": "^4.0.5",
     "tslib": "^2.8.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.29.0",
-    "vite": "^5.4.21",
+    "vite": "^6.4.1",
     "vitest": "^3.0.5",
     "vitest-localstorage-mock": "^0.1.2"
   },
