--- a/recuperation-guides/package.json
+++ b/recuperation-guides/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
     "start": "node --import tsx src/index.ts",
     "test": "node --import tsx --test './tests/**/*.spec.ts'"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "node-html-parser": "^7.0.1"
   }
 }
